# oop-repo

./: BattleshipGame.sln  CMakeLists.txt
BattleshipGame/: BattleshipGame.vcxproj  BattleshipGame.vcxproj.filters  BoardFactory.cpp  BoardFactory.h  CMakeLists.txt  Game.cpp  GameUtils.cpp  GameUtils.h  IBattleshipGameAlgo.h  Player.cpp  Player.h  Ship.cpp  Ship.h  files.txt  students.txt
